# PokemonBattle

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  README.md  docker-compose.yml  index.html  model-docs.json  sitemap.xml
.github/workflows/: docs.yml
backend/: .dockerignore  Dockerfile  conftest.py  entrypoint.sh  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/battles/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
backend/battles/migrations/: 0001_initial.py
backend/battles/tests/: test_battle_create.py  test_battle_history.py  test_battle_item.py  test_battle_turn.py  test_damage_calculation.py
backend/config/: asgi.py  settings.py  test_settings.py  urls.py  wsgi.py
backend/docs/: index.md
backend/docs/configs/: custom_schema.json
backend/docs/technical/: api-architecture.md  caching-strategy.md  code-quality.md  database-optimization.md  design-patterns.md  docker-infrastructure.md  index.md  management-commands.md  testing.md
backend/players/: managers.py  models.py  serializers.py  urls.py  views.py
backend/players/migrations/: 0001_initial.py  0002_player_pokemons.py  0003_remove_player_pokemons.py  0004_player_active_pokemon.py
backend/players/tests/: test_auth.py  test_player.py
backend/pokemon/: admin.py  apps.py  filters.py  managers.py  models.py  serializers.py  signals.py  throttles.py  urls.py  views.py
backend/pokemon/management/commands/: seed_all.py  seed_pokemon.py  seed_pokemon_types.py  seed_type_effectiveness.py
backend/pokemon/migrations/: 0001_initial.py  0002_playerpokemon_alter_pokemon_options_and_more.py  0003_pokemon_players.py  0004_playerpokemon_deleted_at.py  0005_alter_playerpokemon_managers.py
backend/pokemon/tests/: test_pokeapi.py  test_pokemon.py  test_pokemon_me.py  test_pokemon_type.py  test_type_effectiveness.py
backend/scoreboard/: serializers.py  urls.py  views.py
backend/scoreboard/tests/: test_scoreboard.py
backend/services/: __init__.py  base.py  types.py
backend/services/pokeapi/: __init__.py  client.py
backend/utils/: __init__.py  coreapi_compat.py  exception_handler.py  models.py
backend/utils/cache/: __init__.py  constants.py  manager.py
backend/utils/exceptions/: exception_handler.py  exceptions.py
backend/utils/game/: __init__.py  ai.py  battle_creator.py  battle_manager.py  damage_calculator.py  exceptions.py  items.py  turn_processor.py
backend/utils/third_party_services/: __init__.py
backend/utils/third_party_services/PokemonAPI/: __init__.py  base.py
backend/utils/third_party_services/PokemonAPI/pokeapi/: __init__.py  client.py
endpoints/: index.html
er_diagrams/: index.html
er_diagrams/battles/: index.html
er_diagrams/main/: index.html
er_diagrams/players/: index.html
er_diagrams/pokemon/: index.html
frontend/: .dockerignore  .gitignore  Dockerfile  package-lock.json  package.json
models/: index.html
nginx/: Dockerfile  nginx.conf
search/: search_index.json
technical/: index.html
technical/api-architecture/: index.html
technical/caching-strategy/: index.html
technical/code-quality/: index.html
technical/database-optimization/: index.html
technical/design-patterns/: index.html
technical/docker-infrastructure/: index.html
technical/management-commands/: index.html
(+54 files in other folders)
